--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
-graphene_django==3.0.0
 Django==3.2.9
-graphene==2.1.8
+graphene>=3
 psycopg2-binary==2.9.1
 graphene_django==3.0.0
+graphql-relay
+django-allauth
+django-graphql-jwt
